update UI/index.html, change tags in offers-list

--- a/UI/index.html
+++ b/UI/index.html
@@ -29,11 +29,11 @@
                 <label for="to">to:<input class="second-date-filter filter" id="to" type="date"></label>
                 <label for="vendor">Name:<select class="name-filter filter" id="vendor" ></select></label>
                 <label for="hashtags-name">Hashtags:<select class="hashtags-filter filter" id="hashtags-name"></select></label>
-                <button class="add-new-offer-button">Add new offer</button>
+                <button class="add-new-offer-button">Add new<br> offer</button>
             </div>
 
-            <div class="offers-list">
-                <div class="offer">
+            <section class="offers-list">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -79,9 +79,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -127,9 +127,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -175,9 +175,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -223,9 +223,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -271,9 +271,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -319,9 +319,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -367,9 +367,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -415,9 +415,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -463,9 +463,9 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
+                </article>
 
-                <div class="offer">
+                <article class="offer">
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
@@ -511,13 +511,13 @@
                     <div class="offer-footer">
                         <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
 
             <button class="load-more-button">Load more</button>
             <footer class="footer">
                 <p class="information">
-                    Profit! | Maria Bashmakova | 2 course, 6 group | maryia.bashmakova@gmail.com | 01.03.2021
+                    Profit! | Maria Bashmakova | 2 course, 6 group | maryia.bashmakova@gmail.com | 13.03.2021
                 </p>
             </footer>
         </body>
