--- a/UI/index.html
+++ b/UI/index.html
@@ -12,7 +12,7 @@
         </head>
 
         <body>
-
+            <script src="AdList.js"></script>
             <header class="header">
                 <a class="site-name">
                     <h1 class="site-name">Profit!</h1>
