--- a/UI/index.html
+++ b/UI/index.html
@@ -37,7 +37,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -85,7 +85,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -133,7 +133,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -181,7 +181,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -229,7 +229,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -277,7 +277,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -317,7 +317,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -325,7 +325,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -365,7 +365,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -373,7 +373,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -413,7 +413,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -421,7 +421,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -461,7 +461,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
 
@@ -469,7 +469,7 @@
                     <div class="offer-header">
                         <div class="offer-picture">
                             <div class="image-percent-valid">
-                                <img src="picture.png" class="offer-image">
+                                <img src="pictures/picture.png" class="offer-image">
                                 <p class="percent">20%</p>
                                 <p class="valid-until">Until 01.04.2021</p>
                             </div>
@@ -509,7 +509,7 @@
                         </div>
                     </div>
                     <div class="offer-footer">
-                        <button class="write-feedback-button"><img src="feedback.png" class="feedback-image"></button>
+                        <button class="write-feedback-button"><img src="pictures/feedback.png" class="feedback-image"></button>
                     </div>
                 </article>
             </section>
