--- a/UI/index.html
+++ b/UI/index.html
@@ -7,7 +7,7 @@
             <meta name="Profit" content="width=device-width, initial-scale=1">
             <meta content="Discounts for employees">
             <title>Profit!</title>
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="css/styles.css">
             <link href="https://fonts.googleapis.com/css2?family=Artifika&display=swap" rel="stylesheet">
         </head>
 
