replaces <select> tag with <input> tag for filters in UI/index.html

--- a/UI/index.html
+++ b/UI/index.html
@@ -26,8 +26,8 @@
                 <h1 class="filter-name">Filter by:</h1>
                 <label for="from">Date from:<input class="first-date-filter filter" id="from" type="date"></label>
                 <label for="to">to:<input class="second-date-filter filter" id="to" type="date"></label>
-                <label for="vendor">Name:<select class="name-filter filter" id="vendor" ></select></label>
-                <label for="hashtags-name">Hashtags:<select class="hashtags-filter filter" id="hashtags-name"></select></label>
+                <label for="vendor">Name:<input class="name-filter filter" id="vendor" ></input></label>
+                <label for="hashtags-name">Hashtags:<input class="hashtags-filter filter" id="hashtags-name"></input></label>
                 <button class="add-new-offer-button">Add new<br> offer</button>
             </div>
 
