--- a/UI/index.html
+++ b/UI/index.html
@@ -84,7 +84,8 @@
                     Profit! | Maria Bashmakova | 2 course, 6 group | maryia.bashmakova@gmail.com | 12.04.2021
                 </p>
             </footer>
-            <script src="js/AdList.js"></script>
+            <script src="js/Model.js"></script>
             <script src="js/View.js"></script>
+            <script src="js/scriptForView.js"></script>
         </body>
 </html>
