--- a/ProfitSite/src/main/webapp/index.html
+++ b/ProfitSite/src/main/webapp/index.html
@@ -6,7 +6,7 @@
             <meta charset="UTF-8">
             <meta name="Profit" content="width=device-width, initial-scale=1">
             <meta content="Discounts for employees">
-            <title>Profit!</title>
+            <title>profit!</title>
             <link rel="stylesheet" href="resources\css\styles.css">
             <link href="https://fonts.googleapis.com/css2?family=Artifika&display=swap" rel="stylesheet">
         </head>
@@ -15,7 +15,7 @@
             <script src="AdList.js"></script>
             <header class="header">
                 <a class="site-name">
-                    <h1 class="site-name">Profit!</h1>
+                    <h1 class="site-name">profit!</h1>
                 </a>
                 <div class="name-and-sign-out">
                     <p class="username">maria.bashmakova</p>
@@ -517,7 +517,7 @@
             <button class="load-more-button">Load more</button>
             <footer class="footer">
                 <p class="information">
-                    Profit! | Maria Bashmakova | 2 course, 6 group | maryia.bashmakova@gmail.com | 13.03.2021
+                    profit! | Maria Bashmakova | 2 course, 6 group | maryia.bashmakova@gmail.com | 13.03.2021
                 </p>
             </footer>
         </body>
