--- a/ProfitSite/src/main/webapp/index.html
+++ b/ProfitSite/src/main/webapp/index.html
@@ -68,8 +68,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -116,8 +116,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -164,8 +164,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -212,8 +212,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -260,8 +260,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -308,8 +308,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -356,8 +356,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -404,8 +404,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -452,8 +452,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
@@ -500,8 +500,8 @@
                             </p>
                             <div class="feedbacks offer-info">
                                 <h4>Feedbacks</h4>
-                                <p class="review">Name:
-                                    <span class="review">The best gym in Minsk!</span>
+                                <p class="reviewText">Name:
+                                    <span class="reviewText">The best gym in Minsk!</span>
                                 </p>
                                 <button class="more-feedbacks-button">More feedbacks</button>
                             </div>
