--- a/UI/index.html
+++ b/UI/index.html
@@ -23,14 +23,16 @@
             </header>
 
             <div class="page">
-                <form class="filters">
-                    <h1 class="filter-name">Filter by:</h1>
-                    <label for="from">Date from:<input class="first-date-filter filter" id="from" type="date" name="dateFromFilter"></label>
-                    <label for="to">to:<input class="second-date-filter filter" id="to" type="date" name="dateToFilter"></label>
-                    <label for="vendor">Name:<input class="name-filter filter" id="vendor" name="vendorFilter"></input></label>
-                    <label for="hashtags-name">Hashtags:<input class="hashtags-filter filter" id="hashtags-name" name="hashtagsFilter"></input></label>
+                <div class="filters">
+                    <form class="filters-form">
+                        <h1 class="filter-name">Filter by:</h1>
+                        <label for="from">Date from:<input class="first-date-filter filter" id="from" type="date" name="dateFromFilter"></label>
+                        <label for="to">to:<input class="second-date-filter filter" id="to" type="date" name="dateToFilter"></label>
+                        <label for="vendor">Name:<input class="name-filter filter" id="vendor" name="vendorFilter"></input></label>
+                        <label for="hashtags-name">Hashtags:<input class="hashtags-filter filter" id="hashtags-name" name="hashtagsFilter"></input></label>
+                    </form>
                     <button class="add-new-offer-button">Add new<br> offer</button>
-                </form>
+                </div>
 
                 <section class="offers-list">
                     <div class="offer-template">
